[package]
name = "rust_sdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
get_if_addrs = "0.5.3"
socket2 = "0.4.7"
bytebuffer-rs = "0.4.0"
lazy_static = "1.4.0"
fast-math = "0.1"
cpal = "0.14.0"
fltk = { version = "^1.2", features = ["fltk-bundled"] }
fltk-grid = "0.1"
egui = "0.19.0"
eframe = "0.19.0"
egui_glow = "0.19.0"
rfd = "0.10.0"
itertools = "0.10.5"